# Context-Engineering-for-Multi-Agent-Systems

./: CHANGELOG.md  Data_Ingestion_Marketing.ipynb  LICENSE  README.md  main.py  pyproject.toml  requirement.txt
Chapter01/: Alternative_Meeting_Transcript.txt  Meeting_transcript_02.txt  SLR.ipynb  Use_Case.ipynb  Use_Case_Flowchart.html  Use_Case_Meeting_02.ipynb  use_case.mhtml
Chapter02/: MAS_MCP.ipynb  MAS_MCP_control.ipynb
Chapter03/: Context_Aware_MAS.ipynb  RAG_Pipeline.ipynb
Chapter04/: Context_Engine.ipynb
Chapter05/: Context_Engine.ipynb  Context_Engine_MAS_MCP.ipynb  Context_Engine_Pre_Production.ipynb
Chapter06/: Context_Engine_Content_Reduction.ipynb
Chapter07/: High_Fidelity_Data_Ingestion.ipynb  NASA_Research_Assistant_and_Retrocompatibility.ipynb
Chapter08/: Data_Ingestion.ipynb  Legal_assistant_Explorer.ipynb  agents.py
Chapter09/: Data_Ingestion_Marketing.ipynb  Marketing_Assistant.ipynb  Marketing_Assistant_Token_0ptimization.ipynb  Marketing_Assistant_Token_Optimization.ipynb  Marketing_Assistant_Token_optimization.ipynb
Chapter10/: Universal_Context_Engine.ipynb
commons/: agents.py  engine.py  helpers.py  registry.py  utils.py
commons/ch6/: agents.py
commons/ch7/: agents.py  helpers.py
commons/ch8/: helpers.py
commons/ch9/: Readme
commons/engine/: agents_k15.py  engine_k15.py
