[project]
name = "context-engineering-for-multi-agent-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.60.0",
    "pinecone==7.0.0",
    "pyreadline3>=3.5.4",
    "python-dotenv>=1.2.1",
    "tenacity==8.3.0",
    "tiktoken>=0.12.0",
    "tqdm==4.67.1",
]
